redis container created

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 # settings for docker-compose.yaml
 
-APP_NAME=Docker Test
+APP_NAME=CakePHP 4 Queue
 
-NGINX_PORT=8073
-FORWARD_DB_PORT=3310
-REDIS_PORT=6011
-
+FORWARD_DB_PORT=5088
+NGINX_PORT=6088
+REDIS_PORT=7088
+FORWARD_MAILHOG_DASHBOARD_PORT=8088
+FORWARD_MAILHOG_PORT=9088
 
 DB_CONNECTION=mysql
 DB_HOST=mysql
@@ -13,9 +14,6 @@ DB_PORT=3306
 DB_DATABASE=devtest
 DB_USERNAME=devtest
 DB_PASSWORD=devtest
-
-FORWARD_MAILHOG_PORT=1027
-FORWARD_MAILHOG_DASHBOARD_PORT=6012
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
