--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,13 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
 services:
+  redis:
+    image: redis
+    restart: unless-stopped
+    ports:
+      - "${FORWARD_REDIS_PORT:-6379}:6379"
+    networks:
+      - cakephp4-queue-net
   nginx:
     image: nginx:latest
     ports:
@@ -11,11 +18,8 @@ services:
       - '.:/var/www/html'
       - ./docker/config/nginx/site.conf:/etc/nginx/conf.d/default.conf
       # so we can cache our github tokens
-      - '~/.composer/docker-cache/:/root/.composer:cached'
-      - '~/.config/composer/:/root/.config/composer:cached'
-      - vscode-extensions:/root/.vscode-server/extensions
     networks:
-      - devtest-net
+      - cakephp4-queue-net
     links:
       - php
       - mailhog
@@ -24,17 +28,23 @@ services:
     restart: unless-stopped
   php:
     # image: php:fpm
+    environment:
+      # XDEBUG_MODE: "debug,develop"
+      XDEBUG_MODE: "off"
     restart: unless-stopped
     build:
-       context: ./docker/config/php/
-       dockerfile: Dockerfile
+      context: ./docker/config/php/
+      dockerfile: Dockerfile
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     networks:
-      - devtest-net
+      - cakephp4-queue-net
     volumes:
       - .:/var/www/html
       - ./docker/config/php/php.ini:/usr/local/etc/php/php.ini
+      - '~/.composer/docker-cache/:/home/phpdev/.composer:cached'
+      - '~/.config/composer/:/home/phpdev/.config/composer:cached'
+      - vscode-extensions:/home/phpdev/.vscode-server/extensions
     links:
       - mysql
   mysql:
@@ -49,30 +59,34 @@ services:
       MYSQL_PASSWORD: '${DB_PASSWORD}'
       MYSQL_ROOT_HOST: '%'
     volumes:
-      - 'devtest:/var/lib/mysql'
+      - 'cakephp4-queue:/var/lib/mysql'
       # delegated'
       # /etc/mysql/conf.d for x64
       # for arm image
       # - './docker/config/mysql/my.cnf:/etc/my.cnf'
     networks:
-      - devtest-net
+      - cakephp4-queue-net
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
       retries: 3
       timeout: 5s
   mailhog:
     restart: unless-stopped
-    image: 'mailhog/mailhog:latest'
+    build:
+      context: ./docker/config/mailhog/
+      # Dockerfile from https://github.com/mailhog/MailHog
+      dockerfile: Dockerfile
+    # image: 'mailhog/mailhog:latest'
     ports:
       - '${FORWARD_MAILHOG_PORT:-1025}:1025'
       - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
     networks:
-      - devtest-net
+      - cakephp4-queue-net
 networks:
-  devtest-net:
+  cakephp4-queue-net:
     driver: bridge
 volumes:
-  devtest:
+  cakephp4-queue:
     driver: local
   vscode-extensions:
     driver: local
