--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
         "cakephp/cakephp": "4.4.*",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "cakephp/queue": "^2.0",
+        "enqueue/redis": "^0.10.19",
+        "fakerphp/faker": "^1.23",
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "predis/predis": "^2"
     },
     "require-dev": {
         "cakephp/bake": "^2.6",
